# mamlarr

./: DEPLOYMENT.md  DOCKER_SETUP.md  FINAL_SUMMARY.md  METADATA_FEATURES.md  OFFLINE_TESTING_SETUP.md  PROJECT_STATUS.md  QB_ROADMAP.md  README.md  READY_TO_TEST.md  REPO_STATUS_REPORT.md  ROADMAP.md  SETUP_COMPLETE.md  TESTING.md  UI_COMPLETE.md  UI_FILES_INDEX.md  UI_INTEGRATION_PLAN.md  UI_README.md  docker-compose.yml  pyproject.toml  quick_test.py  run_dev_server.sh  start-docker.sh  test_api.sh  test_offline.py  test_results.txt  test_ui_complete.py  test_with_mock_tracker.sh
.github/workflows/: docker-build.yml
dev/: __init__.py  mock_tracker.py
docker/: Dockerfile  start.sh
docs/: mam_setup.md
mamlarr_service/: __init__.py  api.py  log.py  mam_categories.py  mam_client.py  manager.py  models.py  postprocess.py  qbit_client.py  seeding.py  settings.py  settings_store.py  store.py  transmission.py  ui.py
mamlarr_service/providers/qbit/: __init__.py  add_torrent.py  capabilities.py  client.py  errors.py  factory.py
templates/mamlarr/: base.html  dashboard.html  error.html  job_detail.html  jobs.html  settings.html
templates/mamlarr/components/: job_card.html  progress_bar.html  status_badge.html
templates/mamlarr/fragments/: active_downloads.html
tests/: fixtures.py  test_api.py  test_mam_client.py  test_qbit_add_builder.py  test_qbit_capabilities.py  test_qbit_client.py  test_seeding.py
web/src/components/settings/: QbitSettingsForm.vue  TestConnection.vue
